[gd_scene load_steps=5 format=3 uid="uid://cvj1o3m2uylun"]

[ext_resource type="Texture2D" uid="uid://cb4mim7ejh66w" path="res://Assets/Sprites/Grid/1x/grid.png" id="1_bb1ui"]
[ext_resource type="Script" uid="uid://bly058dyq3hkw" path="res://Scripts/Grids/base_grid.gd" id="2_uto0t"]
[ext_resource type="Texture2D" uid="uid://boa3m7xsr0prg" path="res://Assets/Sprites/Grid/1x/grid_outline_heavy.png" id="3_bb1ui"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l6fcq"]
size = Vector2(128, 128)

[node name="Grid_0_0" type="Sprite2D"]
texture = ExtResource("1_bb1ui")
script = ExtResource("2_uto0t")
grid_type = 1

[node name="Grid Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.278431)
show_behind_parent = true
texture = ExtResource("1_bb1ui")
offset = Vector2(-1, 4)

[node name="Grid Outline" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("3_bb1ui")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_l6fcq")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
